@@ -20,7 +20,12 @@ Revision history for Fatal
           re-enabled.
 
         * FEATURE: Added sysopen() and fcntl() to :file, and
-          exec() to :threads
+          exec() and system to :system.  exec() doesn't yet work
+          due to its prototype;
+
+        * FEATURE: Vanilla 'use autodie' now implies
+          'use autodie qw(:default)'.  This excludes system(),
+          which depends upon an optional module.
 
 1.11_01 Fri Jul  4 12:53:11 AEST 2008
 
